# Untangle

./: .gitignore  README.md  main.py  pyproject.toml  test.sh
examples/: 1. Introduction.ipynb  2. Periodic.ipynb  Introduction.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb  basic.py  cmtf_bsd.py  cmtf_ssd.ipynb  cpd.py  nn.py  scaling.ipynb  scaling.py  smoothing.ipynb  smoothing.py
examples/nn/: README.md  compress.py  train.py
testing/: test_easy.py
untangle/_common/: __init__.py  common.py
untangle/_ops/: __init__.py  ops.py
untangle/algorithm/: __init__.py  common.py  result.py
untangle/algorithm/_base/: __init__.py  _base.py
untangle/algorithm/_cmtf/: __init__.py  _cmtf.py  cmtf.py
untangle/algorithm/basic/: __init__.py  basic.py  test_basic.py
untangle/algorithm/basic_constrained/: __init__.py  basic_constrained.py  test_basic_constrained.py
untangle/algorithm/bspline/: cmtf_bsd.py  test_cmtf_bsd.py
untangle/algorithm/cmtf_bsd/: __init__.py  cmtf_bsd.py  test_cmtf_bsd.py
untangle/algorithm/cmtf_bspline/: cmtf_bsd.py
untangle/algorithm/cmtf_psd/: __init__.py  cmtf_psd.py
untangle/algorithm/cmtf_pspline/: __init__.py  cmtf_psd.py
untangle/algorithm/cmtf_ssd/: __init__.py  cmtf_ssd.py  spline.py
untangle/algorithm/ctd_polynomial/: __init__.py  ctd_polynomial.py
untangle/algorithm/smoothing/: __init__.py  cmtf_bsd.py  cmtf_ssd.py  ctd_ssd.py  projection.py  spline.py  test_cmtf_ssd.py
untangle/decomposition/: __init__.py  common.py  cpd.py  cpd_constrained.py
untangle/ops/: ops.py
untangle/result/: __init__.py  result.py
untangle/scaler/: __init__.py  scaler.py
untangle/testing/: __init__.py  testcases.py  testing.py
untangle/utils/: __init__.py  testing.py  utils.py
