[project]
name = "untangle"
version = "0.0.0"
description = "Jax package for decoupling multivariate functions using tensor decompositions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.0.1",
    "jaxtyping>=0.3.9",
    "beartype>=0.22.9",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.8",
    "bsplx",
]

authors = [{ name = "Maxime Rochkoulets", email = "mrochkoulets@gmail.com" }]

[project.urls]
Homepage = "https://github.com/mrochk/untangle"
Repository = "https://github.com/mrochk/untangle"
Issues = "https://github.com/mrochk/untangle/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["untangle*"]

[tool.uv.workspace]
members = [
    ".",
    "splx",
    "bsplx",
]

[tool.uv.sources]
untangle = { workspace = true }
bsplx = { workspace = true }

[dependency-groups]
dev = [
    "untangle",
]
