[project]
name = "untangle"
version = "0.0.0"
description = "Decoupling multivariate functions using tensor decompositions, in Jax."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.0.1",
    "optax>=0.2.8",
    "jaxtyping>=0.3.9",
    "beartype>=0.22.9",
    "tqdm>=4.67.3",
]

authors = [{ name = "Maxime Rochkoulets", email = "mrochkoulets@gmail.com" }]

[project.urls]
Homepage = "https://github.com/mrochk/untangle"
Repository = "https://github.com/mrochk/untangle"
Issues = "https://github.com/mrochk/untangle/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["untangle*"]

[tool.uv.workspace]
members = [
    ".",
    "bsplx",
]

[tool.uv.sources]
untangle = { workspace = true }
bsplx = { workspace = true }

[dependency-groups]
dev = [
    "untangle",
]
