[project]
name = "decoupling"
version = "0.0.0"
description = "Decoupling multivariate functions using tensor decompositions, in Jax."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.9.0.1",
    "jaxtyping>=0.3.9",
    "beartype>=0.22.9",
    "tqdm>=4.67.3",
    "bsplx>=0.1.1",
]

authors = [{ name = "Maxime Rochkoulets", email = "mrochkoulets@gmail.com" }]

[project.urls]
Homepage = "https://github.com/mrochk/untangle"
Repository = "https://github.com/mrochk/untangle"
Issues = "https://github.com/mrochk/untangle/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["untangle*"]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
untangle = { workspace = true }
